fix: hide overflow in ThreeScene

--- a/components/ThreeScene/ThreeScene.scss
+++ b/components/ThreeScene/ThreeScene.scss
@@ -6,6 +6,7 @@
   width: 100%;
   height: 100%;
   max-width: 100%;
+  overflow: hidden;
   z-index: map-get($z-indexes, three);
 
   canvas {
